# SWUpdateNoticed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  SWUpdateNoticed.desktop  main.cpp  qml.qrc  swupdate.cpp  swupdate.h
src/qml/: SWUpdate.qml  main.qml
